[package]
name = "meas"
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/raine/meas"
repository = "https://github.com/raine/meas"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
duct = "0.13.5"
hhmmss = "0.1.0"
humantime = "2.1.0"
structopt = "0.3.26"
